<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/splash_page_blue"
              android:clipToPadding="false"
>


    <ImageButton
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="0dp"
            android:onClick="goToSearchActivity"
            android:textColor="@color/white"
            android:background="@color/splash_page_blue"
            android:id="@+id/search_button"
            android:src="@android:drawable/ic_menu_search"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:text="@string/popular"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/most_popular_movies" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:elevation="25dp"
            android:translationZ="4dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/now_playing"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/in_theaters" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/now_playing_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/upcoming"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/stay_updated" />


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"/>



</LinearLayout>
