<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_blue"
        tools:context=".SplashPage">

    <TextView
            android:layout_width="250dp"
            android:layout_height="210dp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/app_logo"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="@color/arsenic_wine"
            android:textSize="25sp"
            android:textStyle="bold"
    />


    <TextView
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="450dp"
            android:textAlignment="center"
            android:textColor="@color/pastel_grey"
            android:textSize="15sp"
            android:textStyle="italic"
            android:text="@string/desc_message"

    />

    <Button
            android:id="@+id/enter"
            android:layout_width="195dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_marginTop="700dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/round"
            android:text="@string/Enter"
            android:elevation="25dp"
            android:translationZ="10dp"
            android:textSize="12sp"
            android:onClick="goToAnActivity"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:text="@string/splash_words"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic"

    />


</RelativeLayout>